samples/_failures_safe/1761706540_9fd9bf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8ed08178.c: In function ‘main’:
./samples/SAFE/__tmp_8ed08178.c:131:9: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  131 |         LogEntry entry
      |         ^~~~~~~~
./samples/SAFE/__tmp_8ed08178.c:131:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8ed08178.c:131:9: error: expected declaration or statement at end of input
